--- a/about.html
+++ b/about.html
@@ -25,15 +25,15 @@
   <link rel="stylesheet" href="about.css" />
 
   <!-- SEO Meta Tags -->
-  <title>About Us | Soft Touch Carpets &amp; Elegant Edges</title>
+  <title>About Us | Professional Carpet Fitting &amp; Flooring Services in Luton &amp; St Albans</title>
   <meta
     name="description"
-    content="Discover how our expertise at Soft Touch Carpets & Elegant Edges—backed with 38 years experience—brings quality flooring to homes across Hertfordshire."
-  />
+    content="38 years of expertise in expert carpet fitting, home carpet installation, and quality flooring services. Proudly serving Luton, St Albans and Hertfordshire."
+    />
   <meta
     name="keywords"
-    content="carpet fitting, stairs & landing carpet, vinyl flooring, Hertfordshire, 38 years experience"
-  />
+    content="carpet fitting, home carpet, carpet installation, stair runner, carpet and flooring, Luton carpet fitting, St Albans carpet fitting, 38 years experience"
+    />
 
   <!-- Google Fonts (Playfair Display, Montserrat, Nunito) -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -50,7 +50,7 @@
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "Soft Touch Carpets & Elegant Edges",
-    "description": "Carpet fitting and flooring services in Hertfordshire with 38 years experience—offering high-quality carpets, stairs & landing carpet, vinyl flooring, and custom mat whipping.",
+    "description": "Expert carpet fitting, stair runner installation, home carpet solutions, and comprehensive carpet and flooring services in Hertfordshire—proudly serving Luton and St Albans with 38 years of excellence."
     "telephone": "+44 7768 106205",
     "address": {
       "@type": "PostalAddress",
@@ -108,10 +108,10 @@
     <div class="hero-overlay"></div>
     <div class="container text-center text-white">
       <h1 class="display-4 hero-title mb-3">
-        Our Story
+        Trusted Carpet Fitter with 38 Years of Professional Experience
       </h1>
       <p class="lead fw-normal hero-subtitle">
-        Quality flooring &amp; genuine care—backed with 38 years experience
+        38 years of professional carpet fitting, home carpet installation, and flooring excellence.
       </p>
     </div>
   </header>
@@ -122,7 +122,7 @@
       <div class="row justify-content-center g-4">
         <div class="col-md-10">
           <h2 class="section-heading mb-4">
-            A Legacy of Excellence
+            A Legacy in Carpet Fitting &amp; Flooring Excellence
           </h2>
           <!-- Revised text per your request -->
           <p class="fs-5 m-3">
@@ -203,7 +203,7 @@
       <div class="row mb-4">
         <div class="col-lg-8 mx-auto">
           <h2 class="section-heading">
-            Serving Hertfordshire &amp; Beyond
+            Serving Hertfordshire, Luton &amp; St Albans and Beyond
           </h2>
           <p class="fs-5">
             Based in St Albans first and travelling within a <strong>20–40 mile radius</strong>—and can go further for larger projects.
@@ -246,7 +246,7 @@
   <section class="py-5 text-center">
     <div class="container">
       <h2 class="section-heading mb-3">
-        Ready to Refresh Your Floors?
+        Ready for Carpet Fitting &amp; Flooring Solutions?
       </h2>
       <!-- Changed "our family is here" to "we are here" -->
       <p class="fs-5 mb-4">
