--- a/contact.html
+++ b/contact.html
@@ -17,15 +17,15 @@
   <link rel="stylesheet" href="contact.css" />
 
   <!-- SEO Meta Tags -->
-  <title>Contact Soft Touch Carpets &amp; Elegant Edges | Hertfordshire Flooring Experts</title>
+  <title>Contact Soft Touch Carpets | Professional Carpet Fitting &amp; Installation in Luton, St Albans &amp; Hertfordshire</title>
   <meta
     name="description"
-    content="Get in touch with Soft Touch Carpets & Elegant Edges for free measures, quotes, or more information on carpet fitting, stairs & landing carpet, vinyl, and custom mats."
-  />
+    content="Contact Soft Touch Carpets for expert carpet fitting, home carpet installation, and quality flooring solutions. Get your free measure, quote, or more info on stairs & landing carpet, vinyl flooring, and custom mat services – proudly serving Luton, St Albans, Hertfordshire and beyond."
+    />
   <meta
     name="keywords"
-    content="contact, carpeting, stairs & landing carpet, vinyl flooring, mat services, Hertfordshire"
-  />
+    content="contact, carpet fitting, home carpet installation, stairs &amp; landing carpet, vinyl flooring, custom mat services, Luton, St Albans, Hertfordshire"
+    />
 
   <!-- Google Fonts (Playfair Display, Montserrat, Nunito) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -93,9 +93,9 @@
   <header class="contact-hero d-flex align-items-center justify-content-center">
     <div class="hero-overlay"></div>
     <div class="container text-center text-white">
-      <h1 class="display-4 hero-title mb-3">Let's Connect</h1>
+      <h1 class="display-4 hero-title mb-3">Connect for Carpet Fitting &amp; Installation in Luton</h1>
       <p class="lead mb-4">
-        Ready to transform your floors? We'd love to hear from you.
+        Ready to transform your floors with our carpet fitting, home carpet installation, and quality flooring solutions? Contact us today for free measures.
       </p>
       <a href="#contactSection" class="btn btn-tan btn-lg">Contact Us</a>
     </div>
@@ -109,8 +109,7 @@
         <div class="col-lg-6">
           <h2 class="section-heading mb-4">Get a Quote</h2>
           <p class="fs-5 mb-4">
-            Whether you have a question about our carpet fitting, stairs &amp; landing carpet,
-            vinyl flooring, or want a free quote, our team is here to help.
+            Whether you have a query about expert carpet fitting, home carpet installation, stairs &amp; landing carpet solutions, vinyl flooring options, or custom mat services, our team is ready to help.
           </p>
           <ul class="list-unstyled fs-5">
             <!-- Replaced full address with St Albans, Herts -->
@@ -129,8 +128,7 @@
             </li>
           </ul>
           <p class="small text-muted">
-            We serve Hertfordshire and a 20–40 mile radius. For larger projects,
-            we can travel further—just ask.
+            We proudly serve Hertfordshire, including Luton, St Albans, and surrounding areas within a 20–40 mile radius. For larger projects, we’re happy to travel further—just ask.
           </p>
         </div>
 
@@ -241,9 +239,7 @@
   <section class="py-5 parallax-cta text-center text-white position-relative">
     <div class="cta-overlay"></div>
     <div class="container z-index-2">
-      <h2 class="display-6 fw-bold mb-3">
-        Need Urgent Assistance?
-      </h2>
+      <h2 class="display-6 fw-bold mb-3">Need Urgent Carpet Fitting Assistance?</h2>
       <p class="lead mb-4">
         Give us a call and speak directly to our friendly team. We’re always happy to chat about
         your flooring questions, quotes, or special requests.
