--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
   <link rel="stylesheet" href="index.css" />
 
   <!-- SEO Meta Tags -->
-  <title>Soft Touch Carpets &amp; Elegant Edges | Bespoke Flooring Solutions</title>
+  <title>Soft Touch Carpets | Expert Carpet Fitting & Home Carpet Installation in Luton & St Albans</title>
   <meta 
     name="description" 
-    content="Step into comfort with Soft Touch Carpets & Elegant Edges. Trusted with 38 years experience, we specialise in carpet fitting, stair runners, vinyl flooring, and custom mat services in Hertfordshire and beyond." 
-  />
+    content="Transform your home with expert carpet fitting and installation services. Specialising in stair runner solutions, carpet and flooring, and home carpet upgrades in Luton, St Albans & beyond — backed by 38 years of expertise." 
+    />
   <meta 
     name="keywords" 
-    content="carpet fitting near me, stair runners, vinyl flooring, custom mat whipping, Hertfordshire carpet fitting, 38 years experience"
-  />
+    content="carpet fitting, stair runner, carpet and flooring, home carpet, carpet installation, Luton carpet fitting, St Albans carpet fitting" 
+    />
 
   <!-- Google Fonts (Playfair Display, Montserrat, Nunito) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,7 +42,7 @@
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "Soft Touch Carpets & Elegant Edges",
-    "description": "Carpet fitting, stair runner installation, vinyl flooring, and custom mat services in Hertfordshire. With 38 years experience.",
+    "description": "Expert carpet fitting, stair runner installation, carpet and flooring solutions, and custom mat services in Hertfordshire, proudly serving Luton, St Albans and surrounding areas with 38 years of excellence."
     "telephone": "+44 7768 106205",
     "address": {
       "@type": "PostalAddress",
@@ -102,11 +102,11 @@
   <header class="hero-section position-relative d-flex align-items-center">
     <div class="hero-overlay"></div>
     <div class="container text-white text-center z-index-2">
-      <h1 class="display-3 fw-bold hero-title mb-4">Step Into Luxurious Comfort</h1>
+      <h1 class="display-3 fw-bold hero-title mb-4">Carpet Fitting & Home Installation in Luton</h1>
       <p class="lead hero-subtitle mb-5">
-        Affordable carpets supplied and fitted, stair runners, and bespoke mat services 
-        for Hertfordshire &amp; beyond with 38 years of transforming homes.
-      </p>
+        Affordable home carpet fitting and installation services, professional stair runner solutions, 
+        and bespoke mat services for Luton, St Albans and Hertfordshire — backed by 38 years of excellence.
+      </p>      
       <a href="services.html" class="btn btn-tan btn-lg">
         Explore Our Services
       </a>
@@ -126,12 +126,12 @@
           >
         </div>
         <div class="col-lg-6">
-          <h2 class="section-heading mb-4">Why Choose Us?</h2>
+          <h2 class="section-heading mb-4">Choosing the Right Carpet Fitters in Luton and St. Albans</h2>
           <p class="fs-5 mb-4">
-            At Soft Touch Carpets &amp; Elegant Edges, we bring with 38 years experience, 
-            NVQ-qualified fitters, and a passion for design to every project. Our family-run 
-            ethos ensures you get personal, attentive service—no matter the size or scope.
-          </p>
+            At Soft Touch Carpets &amp; Elegant Edges, our 38 years of experience in carpet fitting 
+            and installation mean you receive quality home carpet solutions every time. Our NVQ-qualified fitters 
+            and personal, family-run approach guarantee precision and care on every project.
+          </p>          
           <ul class="list-unstyled">
             <li class="mb-2"><strong>With 38 years experience</strong> in the flooring industry</li>
             <li class="mb-2">Wide range of <strong>carpets to suit every budget</strong></li>
@@ -167,9 +167,9 @@
               alt="Carpet Fitting" 
               class="img-fluid rounded mb-3"
             >
-            <h4 class="text-brown">Carpet Fitting</h4>
+            <h4 class="text-brown">Carpet Fitting &amp; Installation</h4>
             <p class="mt-2">
-              From underlay to finish, we provide seamless installations that enhance comfort and style.
+              Our professional home carpet fitting and installation service ensures a seamless, high-quality finish.
             </p>
             <a href="services.html" class="btn btn-tan">
               Schedule a Fitting &rarr;
@@ -241,11 +241,11 @@
           </h2>
           <!-- Changed "Based in Hatfield" to "Based in St Albans" & swapped "includes St Albans" to "includes Hatfield" -->
           <p class="fs-5 mb-4">
-            Based in <strong>St Albans</strong>, we serve all of <strong>Hertfordshire</strong> plus 
-            a <strong>20–40 mile radius</strong>. This includes Welwyn Garden City, Cheshunt, Hatfield, 
-            Harpenden, and beyond. For larger projects, we’re happy to discuss travelling further. 
-            Your dream floors are just a call away!
+            Based in <strong>St Albans</strong> and proudly serving <strong>Luton</strong> along with 
+            all of Hertfordshire within a 20–40 mile radius. This includes Welwyn Garden City, Cheshunt, Hatfield, 
+            Harpenden, and more. For larger projects, we’re happy to discuss extended travel – your dream floors await!
           </p>
+          
           <a href="contact.html" class="btn btn-brown">Check Our Availability</a>
         </div>
         <div class="d-none d-lg-flex col-lg-6">
@@ -267,9 +267,9 @@
         Experience the Soft Touch Difference
       </h2>
       <p class="fs-5 mb-4">
-        Transforming homes is our passion. Whether it’s carpet fitting, stairs &amp; landing carpets, 
-        vinyl flooring, or custom mats, we have the expertise to bring your vision to life.
-      </p>
+        Transforming homes is our passion. Whether you need a professional carpet fitting, home carpet installation, 
+        stair runner solutions, or carpet and flooring upgrades, we are here to bring your vision to life.
+      </p>      
       <a href="contact.html" class="btn btn-tan btn-lg">
         Book Your Free Measure
       </a>
