--- a/services.html
+++ b/services.html
@@ -16,15 +16,15 @@
   <!-- Services Page Styles -->
   <link rel="stylesheet" href="services.css" />
 
-  <title>Professional Carpet Fitting &amp; Flooring Services | Hertfordshire</title>
+  <title>Experienced Carpet Fitting &amp; Home Carpet Installation | Luton, St Albans &amp; Hertfordshire</title>
   <meta 
     name="description" 
-    content="Explore Soft Touch Carpets & Elegant Edges for carpet fitting near you, stairs & landing carpet, vinyl flooring, and custom mat services. With 38 years experience in Hertfordshire." 
-  />
+    content="38 years of expertise in expert carpet fitting, home carpet installation, stairs &amp; landing carpet solutions, vinyl flooring, and custom mat whipping. Proudly serving Luton, St Albans, Hertfordshire and beyond." 
+    />
   <meta 
     name="keywords" 
-    content="carpet fitters near me, carpet fitting, stairs landing carpet, vinyl flooring Hertfordshire, custom mat whipping, 38 years experience" 
-  />
+    content="carpet fitting, home carpet installation, stairs &amp; landing carpet, vinyl flooring, custom mat whipping, Luton carpet fitting, St Albans carpet fitting, Hertfordshire carpet services, 38 years experience" 
+    />
 
   <!-- Google Fonts (Playfair Display, Montserrat, Nunito) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,7 +40,7 @@
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "Soft Touch Carpets & Elegant Edges",
-    "description": "Carpet fitting, stairs & landing carpet, vinyl flooring, and custom mat services in Hertfordshire, with 38 years experience.",
+    "description": "carpet fitting, home carpet installation, stairs & landing carpet, vinyl flooring, and custom mat solutions in Hertfordshire—proudly serving Luton, St Albans and surrounding areas with 38 years experience."
     "telephone": "+44 7768 106205",
     "address": {
       "@type": "PostalAddress",
@@ -102,12 +102,12 @@
     <div class="container text-center text-white">
       <!-- Changed "Over 40 years" to "with 38 years experience" -->
       <h1 class="display-4 hero-title mb-3">
-        Transform Your Floors With Expert Care
+        Best Carpet Fitting &amp; Home Installation
       </h1>
       <p class="lead fw-normal">
-        With 38 years experience in carpet fitting, stairs &amp; landing carpet, 
-        vinyl flooring, and custom mat solutions for Hertfordshire &amp; beyond.
+        With 38 years of expertise in carpet fitting, home carpet installation, stairs &amp; landing carpet, vinyl flooring, and custom mat whipping — proudly serving Luton, St Albans, Hertfordshire and beyond.
       </p>
+      
       <a href="contact.html" class="btn btn-tan btn-lg mt-4">
         Get a Free Quote
       </a>
@@ -120,12 +120,12 @@
       <div class="row text-center mb-5">
         <div class="col-lg-8 mx-auto">
           <h2 class="section-heading mb-4" style="font-family: 'Playfair Display', serif;">
-            Our Flooring Services
+            Our Carpet Fitting &amp; Flooring Solutions
           </h2>
           <p class="fs-5">
             Whether you need plush carpets, durable vinyl for high-traffic areas, 
             or bespoke mat whipping to make use of leftovers, Soft Touch Carpets &amp; Elegant Edges has you covered. 
-            Explore our services below to see why customers across Hertfordshire trust us for quality flooring.
+            Explore our services below to see why customers across Luton and Hertfordshire trust us for quality flooring.
           </p>
         </div>
       </div>
@@ -145,7 +145,7 @@
         </div>
         <div class="col-md-6">
           <h3 style="font-family: 'Montserrat', sans-serif; color: #fff;">
-            Carpet Fitting
+            Professional Carpet Fitting &amp; Installation
           </h3>
           <p class="mt-3">
             Our NVQ-qualified installers are experts at fitting carpets of all types—from luxury Saxony 
